--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,20 @@
 [package]
-name = "mdka-rs-git"
-version = "0.1.0"
+name = "mdka-rs"
+version = "0.0.1"
 edition = "2021"
+authors = ["nabbisen <nabbisen@scqr.net>"]
+license = "Apache-2.0"
+description = "HTML to Markdown conversion - Lightweight library written in Rust"
+repository = "https://github.com/nabbisen/mdka-rs"
+readme = "README.md"
+categories = ["development-tools", "parsing", "parser-implementations"]
+keywords = ["html", "markdown", "parser", "conversion"]
+rust-version = "1.75.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "mdka"
+path = "src/lib.rs"
 
 [dependencies]
+html5ever = "^0.26.0"
+markup5ever_rcdom = "^0.2.0"
