--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "mdka"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["nabbisen <nabbisen@scqr.net>"]
 license = "Apache-2.0"
-description = "HTML to Markdown conversion - Lightweight library written in Rust"
+description = "HTML to Markdown converter - Lightweight library written in Rust"
 repository = "https://github.com/nabbisen/mdka-rs"
 readme = "README.md"
 categories = ["development-tools", "parsing", "parser-implementations"]
