--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,13 @@ path = "src/lib.rs"
 html5ever = "^0.26.0"
 markup5ever_rcdom = "^0.2.0"
 
+[dev-dependencies]
+criterion = "0.5"
+
 [[example]]
 name = "trial"
 path = "examples/trial.rs"
+
+[[bench]]
+name = "benchmark"
+harness = false
