--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ repository = "https://github.com/nabbisen/mdka-rs"
 readme = "README.md"
 categories = ["development-tools", "parsing", "parser-implementations"]
 keywords = ["html", "markdown", "parser", "conversion"]
-rust-version = "1.75.0"
+rust-version = "1.74.1"
 
 [lib]
 name = "mdka"
 path = "src/lib.rs"
 
 [dependencies]
-html5ever = "^0.26.0"
-markup5ever_rcdom = "^0.2.0"
+html5ever = "0.26"
+markup5ever_rcdom = "0.2"
 
 [dev-dependencies]
 criterion = "0.5"
