--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mdka"
-version = "1.2.5"
+version = "1.2.6"
 edition = "2021"
 authors = ["nabbisen <nabbisen@scqr.net>"]
 license = "Apache-2.0"
@@ -16,11 +16,11 @@ name = "mdka"
 path = "src/lib.rs"
 
 [dependencies]
-html5ever = "0.27"
-markup5ever_rcdom = "0.3"
+html5ever = "^0.27"
+markup5ever_rcdom = "^0.3"
 
 [dev-dependencies]
-criterion = "0.5"
+criterion = "^0.5"
 
 [[example]]
 name = "trial"
