rethink env vars

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -52,7 +52,7 @@ jobs:
 
     env:
       WORKDIR: ${{ github.run_id }}
-      ARTIFACT_ASSET_PREFIX: ${{ env.PRODUCT_BASENAME }}-${{ github.ref_name }}
+      ARTIFACT_ASSET_PREFIX: ${PRODUCT_BASENAME}-${{ github.ref_name }}
       ARTIFACT_DIR: artifact
 
     steps:
@@ -74,17 +74,17 @@ jobs:
 
       - name: Build the Rust extension
         run: |
-          mkdir ${{ env.WORKDIR }}
-          cargo build --release --target ${{ matrix.target }} --bin ${{ env.PRODUCT_BASENAME }} --target-dir ${{ env.WORKDIR }} --locked
-          cd ${{ env.WORKDIR }}
-          mkdir ${{ env.ARTIFACT_DIR }}
-          mv ${{ env.PRODUCT_BASENAME }}${{ matrix.binext }} ${{ env.ARTIFACT_DIR }}
+          mkdir ${WORKDIR}
+          cargo build --release --target ${{ matrix.target }} --bin ${PRODUCT_BASENAME} --target-dir ${WORKDIR} --locked
+          cd ${WORKDIR}
+          mkdir ${ARTIFACT_DIR}
+          mv ${PRODUCT_BASENAME}${{ matrix.binext }} ${ARTIFACT_DIR}
       
       - name: Upload Rust build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.ARTIFACT_ASSET_PREFIX }}-${{ matrix.target }}
-          path: ${{ env.WORKDIR }}/${{ env.ARTIFACT_DIR }}/
+          name: ${ARTIFACT_ASSET_PREFIX}-${{ matrix.target }}
+          path: ${WORKDIR}/${ARTIFACT_DIR}/
 
 #      - name: Set up Python
 #        uses: actions/setup-python@v5
