--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -79,7 +79,7 @@ jobs:
 
       - name: Build the Rust extension
         run: |
-          mkdir "$HOME/${ARTIFACT_DIR}"
+          mkdir -p "$HOME/${ARTIFACT_DIR}"
           cargo build --release --target ${{ matrix.target }} --bin ${PRODUCT_BASENAME} --locked
           mv "target/${{ matrix.target }}/release/${PRODUCT_BASENAME}${{ matrix.binext }}" "$HOME/${ARTIFACT_DIR}"
       
@@ -87,7 +87,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "${PRODUCT_BASENAME}-${TAG}-${{ matrix.target }}"
-          path: "$HOME/${ARTIFACT_DIR}"
+          path: "$HOME/${ARTIFACT_DIR}/*"
 
 #      - name: Set up Python
 #        uses: actions/setup-python@v5
