--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -97,8 +97,8 @@ jobs:
       - name: Upload Rust build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: "${PRODUCT_BASENAME}-${TAG}-${{ matrix.target }}"
-          path: "${ARTIFACT_DIR}/*"
+          name: "${PRODUCT_BASENAME}${{ matrix.binext }}"
+          path: "${ARTIFACT_DIR}/${PRODUCT_BASENAME}${{ matrix.binext }}"
 
 #      - name: Set up Python
 #        uses: actions/setup-python@v5
