--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -86,19 +86,19 @@ jobs:
 
       - name: Build the Rust extension
         run: |
-          mkdir -p "${ARTIFACT_DIR}"
+          mkdir -p "artifact"
           cargo build --release --target ${{ matrix.target }} --bin ${PRODUCT_BASENAME} --locked
           echo "target/${{ matrix.target }}/release:"
           ls "target/${{ matrix.target }}/release"
-          mv "target/${{ matrix.target }}/release/${PRODUCT_BASENAME}${{ matrix.binext }}" "${ARTIFACT_DIR}"
-          echo "${ARTIFACT_DIR}:"
-          ls "${ARTIFACT_DIR}"
+          mv "target/${{ matrix.target }}/release/${PRODUCT_BASENAME}${{ matrix.binext }}" "artifact"
+          echo "artifact:"
+          ls "artifact"
       
       - name: Upload Rust build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: "${PRODUCT_BASENAME}${{ matrix.binext }}"
-          path: "${ARTIFACT_DIR}/${PRODUCT_BASENAME}${{ matrix.binext }}"
+          name: "${PRODUCT_BASENAME}-${TAG}-${{ matrix.target }}"
+          path: "artifact/*"
 
 #      - name: Set up Python
 #        uses: actions/setup-python@v5
