--- a/.github/workflows/release-executable.yaml
+++ b/.github/workflows/release-executable.yaml
@@ -5,7 +5,8 @@ on:
   #   types: [created]
   push:
     branches:
-      - ci-py-itg
+      - dev
+
 permissions:
   contents: read
   # used to sign the release artifacts
